Fix overflow on data preview.

--- a/www/style/wide.css
+++ b/www/style/wide.css
@@ -17,6 +17,7 @@ header #searchbox {
 .twocol main {
     float: left;
     width: 75%;
+    overflow: auto;
 }
 
 .twocol aside {
